--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -2,7 +2,7 @@
 .cta-btn {
   display: inline-block;
   position: relative;
-  padding: 0.8rem $default-font-size;
+  padding: 1rem $default-font-size;
   font-weight: bold;
   line-height: 1;
   z-index: 1;
@@ -62,6 +62,7 @@
 
 /* Resume Style */
 .cta-btn--resume {
+  margin-left: 1rem;
   color: $white-color;
   border: 2px solid $white-color;
 
