--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -48,6 +48,9 @@
       }
 
       &-text {
+        // font-size: 16px;
+        // font-weight: bold;
+        padding-left: 10px;
         text-align: left;
 
         @include respond(tab-port) {
